fix table cell alignments

--- a/src/styles/elements/_base.scss
+++ b/src/styles/elements/_base.scss
@@ -80,7 +80,7 @@ a {
   text-transform: capitalize;
 }
 .sub {
-  font-size: 0.85rem;
+  font-size: 0.8rem;
 }
 .small {
   font-size: 14px;
